header div corrected mobile  footer flex-direction corrected icons social media align corrected a tag structures in news corrected news hover cursor pointer add

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,6 @@ main{
     flex-direction: column-reverse;
 }
 main a{
-    width: 100%;
     color:black;
     text-decoration: none;
 }
@@ -146,12 +145,17 @@ footer{
 
 footer .container{
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     margin-bottom: 2em;
  
 }
-footer .socialMedia h3,
-footer .contact h3{
+footer .container .socialMedia{
+    margin-bottom: 20px;
+}
+
+footer .container .socialMedia h3,
+footer .container .contact h3{
     display: inline-block;
     padding-bottom: 5px;
     margin-bottom: 10px;
@@ -161,6 +165,7 @@ footer .contact h3{
 }
 footer .socialMedia li{
     display: inline-block;
+    margin-left: 10px;
 }
 footer .contact li{
     padding-bottom:5px ;
@@ -209,7 +214,7 @@ footer .copyRight{
     }
     main .containerSections  #secondarySection .secondaryNew{
         width: 250px;
-        margin-top: 10px;
+        margin:5px;
         font-size: 0.7em;
     }
     /*ASIDE */
@@ -273,6 +278,18 @@ footer .copyRight{
     50%{box-shadow: 0 0 0px white ;}
     100%{box-shadow: 0 0 10px black ;}
     }
+    /* FOOTER */
+    footer .container{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        margin-bottom: 2em;
+     
+    }
+    footer .container .socialMedia{
+        margin-bottom: 0;
+    }
+
 }
 
 
@@ -285,16 +302,21 @@ footer .copyRight{
         padding-right: 10px;
         border-right: 3px solid darkgray ;
     }
-    main .containerSections #mainSection .mainNew a{
+    main .containerSections #mainSection .mainNew{
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+    main .containerSections #mainSection .mainNew:hover{
+        cursor:pointer;
+    }
+
     main .containerSections #mainSection .mainNew .mainImg{
         width: 455px;
     } 
     main .containerSections #secondarySection .secondaryNew:hover{
         box-shadow: 0 0 5px black;
+        cursor: pointer;
     }
     main aside{
         flex:1;
